--- a/index.html
+++ b/index.html
@@ -80,9 +80,11 @@
             <h1>Best Popular Rooms</h1>
             <div class="rooms">
                 <div class="card">
-                    <img class="rounded"
+                    <a href="#">
+                        <img class="rounded"
                         src="https://images.pexels.com/photos/164595/pexels-photo-164595.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
                         alt="">
+                    </a>
                     <div class="card-content">
                         <div class="card-info">
                             <div class="card-icon">
@@ -99,7 +101,7 @@
                             <p>1 KING BEDS</p>
                         </div>
                         <div class="text">
-                            <h3>Oak Family Room</h3>
+                            <a href="#"><h3>Oak Family Room</h3></a>
                             <p>lorem ipsum dolor sit amet consectetur.</p>
                         </div>
                         <div class="price">
@@ -109,9 +111,11 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img class="rounded"
+                    <a href="#">
+                        <img class="rounded"
                         src="https://images.pexels.com/photos/7749049/pexels-photo-7749049.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
                         alt="">
+                    </a>
                     <div class="card-content">
                         <div class="card-info">
                             <div class="card-icon">
@@ -128,7 +132,7 @@
                             <p>1 KING BEDS</p>
                         </div>
                         <div class="text">
-                            <h3>Oak Family Room</h3>
+                            <a href="#"><h3>Oak Family Room</h3></a>
                             <p>lorem ipsum dolor sit amet consectetur.</p>
                         </div>
                         <div class="price">
@@ -138,9 +142,11 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img class="rounded"
+                    <a href="#">
+                        <img class="rounded"
                         src="https://images.pexels.com/photos/271643/pexels-photo-271643.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
                         alt="">
+                    </a>
                     <div class="card-content">
                         <div class="card-info">
                             <div class="card-icon">
@@ -157,7 +163,7 @@
                             <p>1 KING BEDS</p>
                         </div>
                         <div class="text">
-                            <h3>Oak Family Room</h3>
+                            <a href="#"><h3>Oak Family Room</h3></a>
                             <p>lorem ipsum dolor sit amet consectetur.</p>
                         </div>
                         <div class="price">
